feat: adding getting user id by token from create room
