# api-gateway/docs/swagger.json
@@ -101,6 +101,13 @@
                 "summary": "Criar nova sala",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Token de autenticação (Bearer token)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Dados da nova sala",
                         "name": "room",
                         "in": "body",
@@ -224,6 +231,13 @@
                 ],
                 "summary": "Excluir sala",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token de autenticação (Bearer token)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "ID da sala",
